# ZVD

./: .gitignore  BUILDING.md  CODEC_LICENSES.md  CODEC_STATUS.md  Cargo.toml  HARDWARE_ACCELERATION_GUIDE.md  IMPLEMENTATION_TRACKER.md  LEFT_TODO.md  PROJECT_TODO.md  PURE_RUST_CODEC_ROADMAP.md  README.md  ROADMAP.md  build.rs  generate_test_wav  test_440hz.flac  test_stereo.flac  test_video.y4m
benches/: README.md  codec_benchmarks.rs  filter_benchmarks.rs
docs/: AV1_DECODER.md  H265_RESEARCH.md  IMPLEMENTATION_SUMMARY.md  NEURAL_CODEC_ZVC69.md  NEURAL_DONE.md  NEURAL_TODO.md  VP8_IMPLEMENTATION_SPEC.md  VP9_IMPLEMENTATION_SPEC.md  ZVC69_ARCHITECTURE.md  ZVC69_USER_GUIDE.md
examples/: mp4_decode.rs
proto/: worker.proto
src/: error.rs  lib.rs  main.rs
src/codec/: decoder.rs  encoder.rs  frame.rs  gop.rs  mod.rs  multipass.rs
src/codec/aac/: decoder.rs  encoder.rs  mod.rs
src/codec/av1/: decoder.rs  encoder.rs  mod.rs
src/codec/dnxhd/: bitstream.rs  data.rs  dct.rs  decoder.rs  encoder.rs  idct.rs  macroblock.rs  mod.rs  quant.rs  tables.rs  vlc.rs
src/codec/flac/: decoder.rs  encoder.rs  mod.rs
src/codec/h264/: decoder.rs  encoder.rs  mod.rs  nal.rs
src/codec/h265/: amvp.rs  bitstream.rs  bitstream_writer.rs  cabac.rs  ctu.rs  decoder.rs  dpb.rs  encoder_intra.rs  encoder_transform.rs  filter.rs  headers.rs  intra.rs  mc.rs  me.rs  merge.rs  mod.rs  mode_decision.rs  mv.rs  nal.rs  quant.rs  rdo.rs  scan.rs  transform.rs  weighted_pred.rs
src/codec/mp3/: decoder.rs  mod.rs
src/codec/opus/: decoder.rs  encoder.rs  mod.rs
src/codec/pcm/: decoder.rs  encoder.rs  mod.rs
src/codec/prores/: bitstream.rs  dct.rs  decoder.rs  encoder.rs  idct.rs  mod.rs  quant.rs  slice.rs  tables.rs  vlc.rs
src/codec/vorbis/: decoder.rs  encoder.rs  mod.rs
src/codec/vp8/: bool_decoder.rs  bool_encoder.rs  decoder.rs  encoder.rs  entropy.rs  entropy_encoder.rs  filter.rs  frame.rs  frame_writer.rs  mod.rs  mode_decision.rs  prediction.rs  quant.rs  tables.rs  transform.rs
src/codec/vp9/: block.rs  decoder.rs  encoder.rs  entropy.rs  entropy_encoder.rs  filter.rs  frame.rs  frame_writer.rs  mod.rs  mode_decision.rs  prediction.rs  quant.rs  range_coder.rs  range_encoder.rs  tables.rs  transform.rs
src/codec/zvc69/: benchmark.rs  bitstream.rs  comparison.rs  config.rs  decoder.rs  encoder.rs  entropy.rs  error.rs  memory.rs  mod.rs  model.rs  motion.rs  pipeline.rs  profiler.rs  quantize.rs  residual.rs  tensorrt.rs  warp.rs
src/filter/: audio.rs  chain.rs  denoise.rs  dsp.rs  graph.rs  loudness.rs  metering.rs  mod.rs  resampling.rs  video.rs
src/format/: demuxer.rs  hdr.rs  metadata.rs  mod.rs  muxer.rs  packet.rs  stream.rs  symphonia_adapter.rs
src/format/avi/: demuxer.rs  mod.rs  muxer.rs
src/format/flv/: demuxer.rs  mod.rs  muxer.rs
src/format/ivf/: mod.rs  muxer.rs
src/format/mp4/: demuxer.rs  mod.rs  muxer.rs
src/format/mpegts/: demuxer.rs  mod.rs  muxer.rs
src/format/wav/: demuxer.rs  header.rs  mod.rs  muxer.rs
src/format/webm/: demuxer.rs  mod.rs  muxer.rs
src/format/y4m/: demuxer.rs  mod.rs  muxer.rs
src/hwaccel/: common.rs  mod.rs  nvenc.rs  qsv.rs  vaapi.rs  videotoolbox.rs
src/probe/: format_detector.rs  metadata.rs  mod.rs  stream_analyzer.rs
src/server/: coordinator.rs  dispatch.rs  ffcompat.rs  metrics.rs  mod.rs  protocol.rs  worker.rs
src/streaming/: dash.rs  hls.rs  ll_hls.rs  mod.rs  pipeline.rs  rtmp.rs  rtp.rs  segmenter.rs  srt.rs
src/streaming/rtmp/: amf0.rs  client.rs  mod.rs  protocol.rs
src/subtitle/: ass.rs  common.rs  mod.rs  srt.rs  timestamp.rs  webvtt.rs
src/swresample/: mod.rs
src/swscale/: mod.rs
src/util/: alpha.rs  aspect.rs  buffer.rs  burnin.rs  captions.rs  colorspace.rs  detection.rs  edl.rs  embedding.rs  interpolation.rs  lut.rs  mod.rs  pixfmt.rs  proxy.rs  quality.rs  rational.rs  samplefmt.rs  scopes.rs  stabilization.rs  sync.rs  telecine.rs  tenbit.rs  thumbnail.rs  timecode.rs  timestamp.rs  watermark.rs
tests/: aac_codec_test.rs  audio_codecs_integration_test.rs  audio_decoder_test.rs  av1_codec_test.rs  av1_integration_test.rs  cli_tests.rs  container_formats_integration_test.rs  dnxhd_codec_test.rs  error_handling_test.rs  filter_integration_test.rs  flac_encoder_test.rs  generate_test_wav.rs  h264_codec_test.rs  h264_integration_test.rs  h265_parser_test.rs  hwaccel_test.rs  mp4_integration_test.rs  prores_decode.rs  transcoding_integration_test.rs  vorbis_encoder_test.rs  vp8_codec_test.rs  vp9_codec_test.rs  zvc69_performance_test.rs  zvc69_quality_test.rs
tests/common/: mod.rs
tests/integration/: format_tests.rs  mod.rs  transcode_tests.rs
wasm/: Cargo.toml  README.md  example.html
wasm/src/: lib.rs
