[package]
name = "zvd"
version = "0.1.0"
edition = "2021"
authors = ["ZVD Contributors"]
description = "FFMPEG reimplemented in Rust - A multimedia processing library and CLI tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZachHandley/ZVD"
keywords = ["multimedia", "video", "audio", "codec", "ffmpeg"]
categories = ["multimedia", "command-line-utilities"]

[[bin]]
name = "zvd"
path = "src/main.rs"

[lib]
name = "zvd_lib"
path = "src/lib.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Video/Audio processing foundations
bytes = "1.7"
bitstream-io = "2.5"

# Math and DSP
ndarray = "0.16"
rustfft = "6.2"

# Image processing
image = "0.25"

# Audio sample manipulation
dasp = "0.11"
hound = "3.5"  # WAV support

# Symphonia - Pure Rust audio decoding (MPL-2.0)
# We enable only royalty-free codecs by default
symphonia = { version = "0.5", features = [
    "flac",      # FLAC lossless codec
    "vorbis",    # Ogg Vorbis codec
    "pcm",       # PCM support
    "mp3",       # MP3 (patents expired)
], optional = false }

# AAC codec support (optional, patent-encumbered)
# See CODEC_LICENSES.md for patent licensing requirements
symphonia-codec-aac = { version = "0.5", optional = true }

# Y4M - YUV4MPEG2 raw video format (MIT)
y4m = "0.8"

# AV1 decoder - dav1d bindings (MIT)
# Requires system libdav1d >= 1.3.0
dav1d = "0.10"

# AV1 encoder - rav1e (BSD-2-Clause)
# Pure Rust AV1 encoder
rav1e = "0.7"

# WebM/Matroska demuxer (MIT)
matroska-demuxer = "0.6"

# MP4 container support (MIT)
mp4 = { version = "0.14", optional = true }

# H.264/AVC codec (optional, patent-encumbered)
# OpenH264 from Cisco - BSD 2-Clause license for code
# Binary usage covered by Cisco's patent license
# See CODEC_LICENSES.md for details
openh264 = { version = "0.6", optional = true }

# Color space conversions
rgb = "0.8"

# Parallel processing
rayon = "1.10"

# Memory management
parking_lot = "0.12"

[features]
# Default features - only patent-free, royalty-free codecs
default = []

# Optional patent-encumbered codec support
# Users must acknowledge patent licensing requirements (see CODEC_LICENSES.md)
h264 = ["openh264", "mp4"]
aac = ["symphonia-codec-aac", "mp4"]
mp4-support = ["mp4"]

# Convenience feature to enable all codecs (includes patent-encumbered)
# WARNING: Commercial use requires patent licensing
all-codecs = ["h264", "aac", "mp4-support"]

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.bench]
inherits = "release"
