[package]
name = "zvd"
version = "0.1.0"
edition = "2021"
authors = ["ZVD Contributors"]
description = "FFMPEG reimplemented in Rust - A multimedia processing library and CLI tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZachHandley/ZVD"
keywords = ["multimedia", "video", "audio", "codec", "ffmpeg"]
categories = ["multimedia", "command-line-utilities"]

[[bin]]
name = "zvd"
path = "src/main.rs"

[lib]
name = "zvd_lib"
path = "src/lib.rs"

[[bench]]
name = "codec_benchmarks"
harness = false

[[bench]]
name = "filter_benchmarks"
harness = false

[dependencies]
# CLI and argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptographic hashing (for TensorRT engine caching)
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Video/Audio processing foundations
bytes = "1.7"
bitstream-io = "2.5"

# Math and DSP
ndarray = "0.16"
rustfft = "6.2"

# Image processing
image = "0.25"

# Audio sample manipulation
dasp = "0.11"
hound = "3.5"  # WAV support

# Symphonia - Pure Rust audio decoding (MPL-2.0)
# We enable only royalty-free codecs by default
symphonia = { version = "0.5", features = [
    "flac",      # FLAC lossless codec
    "vorbis",    # Ogg Vorbis codec
    "pcm",       # PCM support
    "mp3",       # MP3 (patents expired)
], optional = false }

# AAC codec support (optional, patent-encumbered)
# The "aac" feature on symphonia enables symphonia-codec-aac
# See CODEC_LICENSES.md for patent licensing requirements

# Y4M - YUV4MPEG2 raw video format (MIT)
y4m = "0.8"

# AV1 decoder - dav1d-rs (MIT)
# Safe Rust bindings to libdav1d AV1 decoder
# libdav1d is the reference AV1 decoder developed by VideoLAN
# System requirement: libdav1d must be installed (apt: libdav1d-dev, brew: dav1d)
dav1d = "0.11"

# AV1 encoder - rav1e (BSD-2-Clause)
# Pure Rust AV1 encoder
# Using no-default-features to avoid asm requirement (nasm), relying on Rust fallback
rav1e = { version = "0.8", default-features = false }

# WebM/Matroska demuxer (MIT)
matroska-demuxer = "0.6"

# WebM/Matroska muxer (MIT)
mkv-element = { version = "0.3", optional = true }

# MP4 container support (MIT)
mp4 = { version = "0.14", optional = true }

# H.264/AVC codec (optional, patent-encumbered)
# OpenH264 from Cisco - BSD 2-Clause license for code
# Binary usage covered by Cisco's patent license
# See CODEC_LICENSES.md for details
# Version 0.9.1 fixes CVE-2025-27091 (heap overflow in decoding functions)
# SECURITY: Must be >= 0.9.1 for the CVE-2025-27091 fix
openh264 = { version = "0.9.1", optional = true }

# Opus codec (royalty-free, patent-free)
# Opus Interactive Audio Codec - BSD license
opus = { version = "0.3", optional = true }

# FLAC encoder (pure Rust, royalty-free)
# Free Lossless Audio Codec encoder - Apache-2.0/MIT license
flacenc = { version = "0.4", optional = true }

# Vorbis encoder (bindings to aoTuV-patched libvorbis, royalty-free)
# High-quality Ogg Vorbis encoder with aoTuV and Lancer optimizations - BSD-3-Clause
# System requirement: libvorbis, libogg must be installed (apt: libvorbis-dev libogg-dev)
vorbis_rs = { version = "0.5", optional = true }

# VP8/VP9 codecs (royalty-free)
# libvpx bindings - MPL-2.0 license
# System requirement: libvpx must be installed (apt: libvpx-dev, brew: libvpx)
# Using libvpx-sys for complete FFI bindings to libvpx
libvpx-sys = { version = "1.4", optional = true }

# Color space conversions
rgb = "0.8"

# Parallel processing
rayon = "1.10"

# Memory management
parking_lot = "0.12"

# Low-level system bindings for pinned memory
libc = "0.2"

# ZVC69 Neural Codec Dependencies
# constriction - ANS entropy coding for learned compression
constriction = "0.4"

# probability - Gaussian distributions for entropy models
probability = "0.20"

# ort - ONNX Runtime for neural network inference (optional)
# Supports CUDA, TensorRT, DirectML, CoreML backends
ort = { version = "2.0.0-rc", optional = true }

# byteorder - Binary data serialization for bitstream handling
byteorder = "1.5"

# ========================
# Hardware Acceleration Dependencies
# ========================

# VAAPI - Video Acceleration API (Linux)
# Safe Rust bindings to libva for Intel/AMD GPU acceleration
# System requirement: libva-dev (apt: libva-dev, fedora: libva-devel)
# NOTE: libva crate is currently not available on crates.io, VAAPI support is stubbed
# libva = { version = "0.0", optional = true }
# libva-sys = { version = "0.0", optional = true }

# DRM - Direct Rendering Manager for VAAPI device access
drm = { version = "0.12", optional = true }

# CUDA Runtime for NVIDIA GPU operations
# Used for NVENC/NVDEC memory management
# Using cuda-version-from-build-system to auto-detect installed CUDA version
cudarc = { version = "0.12", optional = true, features = ["cuda-version-from-build-system"] }

# Server mode dependencies (cross-platform)
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
hostname = "0.4"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
shell-words = "1.1"
num_cpus = "1.16"

# Core Foundation for macOS VideoToolbox
# Used for CVPixelBuffer and CoreMedia types
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"

[build-dependencies]
tonic-build = "0.12"
protobuf-src = "2.1"

[features]
# Default features - only patent-free, royalty-free codecs
default = []

# Patent-free audio codecs
opus-codec = ["opus"]
flac-encoder = ["flacenc"]
vorbis-encoder = ["vorbis_rs"]

# Patent-free video codecs
# Pure Rust implementations are always available; vpx-sys adds libvpx bindings
vp8-codec = []
vp9-codec = []
vp8-libvpx = ["libvpx-sys"]
vp9-libvpx = ["libvpx-sys"]

# Optional patent-encumbered codec support
# Users must acknowledge patent licensing requirements (see CODEC_LICENSES.md)
h264 = ["openh264", "mp4"]
h265 = []  # Pure Rust H.265 implementation (no external dependencies)
aac = ["symphonia/aac", "mp4"]
mp4-support = ["mp4"]
webm-support = ["mkv-element"]

# ZVC69 Neural Video Codec
# Enables GPU-accelerated neural video compression via ONNX Runtime
zvc69 = ["ort"]

# ========================
# Hardware Acceleration Features
# ========================

# VAAPI - Linux hardware acceleration via VA-API (Intel/AMD GPUs)
# Requires libva-dev and appropriate driver (intel-media-driver or mesa)
# NOTE: Stubbed until libva crate is available on crates.io
vaapi = ["drm"]

# NVENC/NVDEC - NVIDIA hardware acceleration
# Requires NVIDIA GPU with NVENC support and CUDA toolkit
nvenc = ["cudarc"]

# Intel QSV - Intel Quick Sync Video (uses VA-API on Linux)
# Requires Intel GPU and oneVPL/libmfx runtime
qsv = []

# VideoToolbox - macOS/iOS hardware acceleration
# Always available on Apple platforms via system frameworks
videotoolbox = []

# Convenience features
all-free-codecs = ["opus-codec", "flac-encoder", "vorbis-encoder", "vp8-codec", "vp9-codec"]
all-containers = ["mp4-support", "webm-support"]
all-codecs = ["h264", "h265", "aac", "all-containers", "all-free-codecs"]
all-hwaccel = ["vaapi", "nvenc", "qsv", "videotoolbox"]

# Server mode - distributed transcoding
server = []

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.bench]
inherits = "release"
